Fix elements positions and overlapping visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,4 @@ th {
 
 table {
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-	margin-left: auto;
-	margin-right: auto;
 }
